--- a/requirements.txt
+++ b/requirements.txt
@@ -10,18 +10,24 @@ bleach==5.0.0
 boto3==1.23.7
 botocore==1.26.7
 bs4==0.0.1
-certifi==2022.5.18.1
+certifi==2022.6.15
 cffi==1.15.0
 charset-normalizer==2.0.12
 click==8.1.2
+convertdate==2.4.0
+cryptography==37.0.4
 cycler==0.11.0
 debugpy==1.6.0
 decorator==5.1.1
 defusedxml==0.7.1
 entrypoints==0.4
+et-xmlfile==1.1.0
 executing==0.8.3
 fastjsonschema==2.15.3
 fonttools==4.32.0
+hijri-converter==2.2.4
+holidays==0.14.2
+html5lib==1.1
 idna==3.3
 importlib-resources==5.7.1
 ipykernel==6.13.0
@@ -43,6 +49,7 @@ jupyterlab-pygments==0.2.2
 jupyterlab-widgets==1.1.0
 kaggle==1.5.12
 kiwisolver==1.4.2
+korean-lunar-calendar==0.2.1
 libcst==0.4.3
 lxml==4.9.0
 MarkupSafe==2.1.1
@@ -57,6 +64,7 @@ nbformat==5.3.0
 nest-asyncio==1.5.5
 notebook==6.4.11
 numpy==1.22.3
+openpyxl==3.0.10
 packaging==21.3
 pandas==1.4.2
 pandocfilters==1.5.0
@@ -77,6 +85,8 @@ pycparser==2.21
 Pygments==2.11.2
 pyinstaller==5.1
 pyinstaller-hooks-contrib==2022.5
+PyMeeus==0.5.11
+pyOpenSSL==22.0.0
 pyparsing==3.0.8
 PyQt5==5.9.2
 PyQt5-Qt5==5.15.2
@@ -121,4 +131,5 @@ utils==1.0.1
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.6.0
+xlrd==2.0.1
 zipp==3.8.0
